Restore dual-home navigation and differentiate Home 1 & Home 2 functionalities

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,8 @@
             <!-- Desktop Menu -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home1.html">Home 1</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home2.html">Home 2</a></li>
                     <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
                     <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
@@ -72,7 +73,8 @@
         </div>
         <div class="offcanvas-body bg-surface">
             <ul class="navbar-nav mb-4">
-                <li class="nav-item"><a class="nav-link fs-5 mb-2" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link fs-5 mb-2" href="home1.html">Home 1</a></li>
+                <li class="nav-item"><a class="nav-link fs-5 mb-2" href="home2.html">Home 2</a></li>
                 <li class="nav-item"><a class="nav-link fs-5 mb-2" href="shop.html">Shop</a></li>
                 <li class="nav-item"><a class="nav-link fs-5 mb-2" href="services.html">Services</a></li>
                 <li class="nav-item"><a class="nav-link fs-5 mb-2" href="about.html">About</a></li>
@@ -229,8 +231,8 @@
                 <!-- Column 2: Company -->
                 <div class="col-lg-2 col-md-6">
                     <h5 class="footer-title">Company</h5>
-                    <a href="index.html" class="footer-link">Home</a>
-                    <a href="shop.html" class="footer-link">Shop</a>
+                    <a href="home1.html" class="footer-link">Home 1</a>
+                    <a href="home2.html" class="footer-link">Home 2</a>
                     <a href="services.html" class="footer-link">Our Services</a>
                     <a href="dashboard.html" class="footer-link">User Dashboard</a>
                     <a href="about.html" class="footer-link">About Us</a>
