--- a/login.html
+++ b/login.html
@@ -19,12 +19,16 @@
 <body>
 
     <!-- Back to Home Button float -->
-    <div class="position-absolute top-0 start-0 m-4 z-3">
-        <a href="index.html"
-            class="btn btn-light border-0 bg-surface shadow-sm rounded-pill d-flex align-items-center justify-content-center px-4 py-2 gap-2 text-decoration-none fw-bold"
+    <div class="position-absolute top-0 start-0 m-4 z-3 d-flex gap-2">
+        <a href="home1.html"
+            class="btn btn-light border-0 bg-surface shadow-sm rounded-pill d-flex align-items-center justify-content-center px-4 py-2 gap-2 text-decoration-none fw-bold small"
             style="color: var(--fs-text);">
-            <i class="bi bi-arrow-left fs-5"></i>
-            <span>Back to Home</span>
+            <i class="bi bi-arrow-left"></i> Home 1
+        </a>
+        <a href="home2.html"
+            class="btn btn-light border-0 bg-surface shadow-sm rounded-pill d-flex align-items-center justify-content-center px-4 py-2 gap-2 text-decoration-none fw-bold small"
+            style="color: var(--fs-text);">
+            <i class="bi bi-arrow-left"></i> Home 2
         </a>
     </div>
 
