--- a/dashboard.html
+++ b/dashboard.html
@@ -109,9 +109,14 @@
                         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-4 border-bottom border-secondary border-opacity-10">
                         <h1 class="h2 fw-bold">Dashboard Analytics</h1>
                         <div class="btn-toolbar mb-2 mb-md-0">
-                            <button type="button" class="btn btn-sm btn-outline-custom d-flex align-items-center gap-2">
-                                <i class="bi bi-download"></i> Export
-                            </button>
+                            <a href="home1.html"
+                                class="list-group-item list-group-item-action bg-transparent border-0 text-white opacity-75 hover-opacity-100 py-3 d-flex align-items-center gap-3">
+                                <i class="bi bi-house-door fs-5"></i> Home 1
+                            </a>
+                            <a href="home2.html"
+                                class="list-group-item list-group-item-action bg-transparent border-0 text-white opacity-75 hover-opacity-100 py-3 d-flex align-items-center gap-3">
+                                <i class="bi bi-house-door fs-5"></i> Home 2
+                            </a>
                         </div>
                     </div>
 
