--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <!-- Desktop Menu -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="home1.html">Home 1</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home2.html">Home 2</a></li>
                     <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
                     <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
@@ -48,12 +49,6 @@
                     <button class="btn btn-link text-body p-0" id="themeToggle" aria-label="Toggle Theme">
                         <i class="bi bi-moon fs-5" id="themeIcon"></i>
                     </button>
-                    <a href="shop.html" class="btn btn-link text-body p-0 position-relative me-2" aria-label="Cart"
-                        id="globalCartIcon">
-                        <i class="bi bi-cart3 fs-5"></i>
-                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                            style="font-size: 0.6rem;" id="cartCount">0</span>
-                    </a>
                     <a href="login.html" class="btn btn-outline-custom d-none d-lg-block">Login</a>
                     <a href="signup.html" class="btn btn-primary-custom d-none d-lg-block">Sign Up</a>
                 </div>
@@ -72,7 +67,8 @@
         </div>
         <div class="offcanvas-body bg-surface">
             <ul class="navbar-nav mb-4">
-                <li class="nav-item"><a class="nav-link active fs-5 mb-2" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link active fs-5 mb-2" href="home1.html">Home 1</a></li>
+                <li class="nav-item"><a class="nav-link fs-5 mb-2" href="home2.html">Home 2</a></li>
                 <li class="nav-item"><a class="nav-link fs-5 mb-2" href="shop.html">Shop</a></li>
                 <li class="nav-item"><a class="nav-link fs-5 mb-2" href="services.html">Services</a></li>
                 <li class="nav-item"><a class="nav-link fs-5 mb-2" href="about.html">About</a></li>
@@ -491,8 +487,8 @@
                 <!-- Column 2: Company -->
                 <div class="col-lg-2 col-md-6">
                     <h5 class="footer-title">Company</h5>
-                    <a href="index.html" class="footer-link">Home</a>
-                    <a href="shop.html" class="footer-link">Shop</a>
+                    <a href="home1.html" class="footer-link">Home 1</a>
+                    <a href="home2.html" class="footer-link">Home 2</a>
                     <a href="services.html" class="footer-link">Our Services</a>
                     <a href="dashboard.html" class="footer-link">User Dashboard</a>
                     <a href="about.html" class="footer-link">About Us</a>
