Refine brand logos on Home 2 with original colors and hover effects

--- a/home2.html
+++ b/home2.html
@@ -354,12 +354,12 @@
         <div class="container py-3">
             <p class="text-center text-muted small fw-bold text-uppercase tracking-wider mb-4">Trusted by the best
                 brands</p>
-            <div class="d-flex flex-wrap justify-content-center align-items-center gap-5 opacity-50">
-                <i class="bi bi-behance fs-2"></i>
-                <i class="bi bi-dribbble fs-2"></i>
-                <i class="bi bi-slack fs-2"></i>
-                <i class="bi bi-meta fs-2"></i>
-                <i class="bi bi-google fs-2"></i>
+            <div class="d-flex flex-wrap justify-content-center align-items-center gap-5">
+                <a href="#" class="brand-link"><i class="bi bi-behance fs-2 brand-behance"></i></a>
+                <a href="#" class="brand-link"><i class="bi bi-dribbble fs-2 brand-dribbble"></i></a>
+                <a href="#" class="brand-link"><i class="bi bi-slack fs-2 brand-slack"></i></a>
+                <a href="#" class="brand-link"><i class="bi bi-meta fs-2 brand-meta"></i></a>
+                <a href="#" class="brand-link"><i class="bi bi-google fs-2 brand-google"></i></a>
             </div>
         </div>
     </section>
