Fix Forgot password link alignment on Login page

--- a/login.html
+++ b/login.html
@@ -63,14 +63,14 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                    <div class="d-flex justify-content-between">
-                        <label class="form-label small fw-bold text-muted">Password</label>
-                        <a href="#" class="small text-primary-custom text-decoration-none">Forgot password?</a>
-                    </div>
-                    <div class="input-group">
+                    <label class="form-label small fw-bold text-muted">Password</label>
+                    <div class="input-group mb-1">
                         <span class="input-group-text bg-transparent border-end-0 text-muted"><i
                                 class="bi bi-lock"></i></span>
                         <input type="password" class="form-control border-start-0 ps-0" placeholder="••••••••" required>
+                    </div>
+                    <div class="text-end">
+                        <a href="#" class="small text-primary-custom text-decoration-none">Forgot password?</a>
                     </div>
                 </div>
                 <div class="mb-4 form-check">
