Fix Already have an account alignment on Signup page

--- a/signup.html
+++ b/signup.html
@@ -99,11 +99,10 @@
                     <i class="bi bi-facebook text-primary"></i> Facebook
                 </button>
             </div>
-        </div>
 
-        <p class="text-center small text-muted mb-0">Already have an account? <a href="login.html"
-                class="text-primary-custom text-decoration-none fw-bold">Sign in</a></p>
-    </div>
+            <p class="text-center small text-muted mb-0 mt-4">Already have an account? <a href="login.html"
+                    class="text-primary-custom text-decoration-none fw-bold">Sign in</a></p>
+        </div>
     </div>
 
     <!-- Bootstrap JS Bundle -->
