--- a/home2.html
+++ b/home2.html
@@ -130,7 +130,7 @@
                         <a href="services.html" class="btn btn-outline-custom mt-auto mx-4">Book Now</a>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4 d-md-none d-lg-block">
+                <div class="col-md-6 col-lg-4">
                     <div class="custom-card card h-100 border-0 p-3 pt-4 text-center">
                         <div class="bg-warning bg-opacity-10 rounded-circle mx-auto d-flex align-items-center justify-content-center mb-3"
                             style="width: 80px; height: 80px;">
