--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
             <div class="row g-4">
                 <!-- Product 1 -->
-                <div class="col-sm-6 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                     <div class="custom-card card h-100">
                         <img src="https://loremflickr.com/400/300/cotton" class="card-img-top object-fit-cover"
                             alt="Fabric" style="height: 200px;">
@@ -211,7 +211,7 @@
                     </div>
                 </div>
                 <!-- Product 2 -->
-                <div class="col-sm-6 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                     <div class="custom-card card h-100">
                         <img src="https://loremflickr.com/400/300/linen" class="card-img-top object-fit-cover"
                             alt="Fabric" style="height: 200px;">
@@ -224,7 +224,7 @@
                     </div>
                 </div>
                 <!-- Product 3 -->
-                <div class="col-sm-6 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                     <div class="custom-card card h-100">
                         <img src="https://loremflickr.com/400/300/silk" class="card-img-top object-fit-cover"
                             alt="Fabric" style="height: 200px;">
@@ -237,7 +237,7 @@
                     </div>
                 </div>
                 <!-- Product 4 -->
-                <div class="col-sm-6 col-lg-3">
+                <div class="col-6 col-md-4 col-lg-3">
                     <div class="custom-card card h-100">
                         <img src="https://loremflickr.com/400/300/thread" class="card-img-top object-fit-cover"
                             alt="Threads" style="height: 200px;">
