--- a/contact.html
+++ b/contact.html
@@ -197,14 +197,12 @@
 
     <!-- Map Section -->
     <section class="pb-0 border-top bg-surface">
-        <div style="height: 400px; background-color: #e9ecef; position: relative;">
-            <div class="position-absolute top-50 start-50 translate-middle text-center text-muted">
-                <i class="bi bi-map fs-1"></i>
-                <p class="mb-0 fw-bold">Interactive Map Placeholder</p>
-                <small>Integration with Google Maps or Mapbox</small>
-            </div>
-            <!-- Example iFrame map implementation (commented out) -->
-            <!-- <iframe src="https://www.google.com/maps/embed?..." width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
+        <div style="height: 400px; width: 100%;">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.25280821873!2d-74.11976373926346!3d40.69766374874431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sin!4v1709030000000!5m2!1sen!2sin"
+                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </div>
     </section>
 
